--- a/Lab11-MyFirstMVCApp/Lab11-MyFirstMVCApp/Lab11-MyFirstMVCApp.csproj
+++ b/Lab11-MyFirstMVCApp/Lab11-MyFirstMVCApp/Lab11-MyFirstMVCApp.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Lab11_MyFirstMVCApp</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\data\personOfTheYear.csv" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
